force-app/main/default/objects/ChatMessageIn__e/ChatMessageIn__e.object-meta.xml
<CustomObject>
    <description>Platform Event: Inbound message from external system</description>
    <label>Chat Message In</label>
    <pluralLabel>Chat Message Ins</pluralLabel>
</CustomObject>