force-app/main/default/objects/ChatMessageIn__e/fields/CorrelationKey__c.field-meta.xml
<CustomField>
    <fullName>CorrelationKey__c</fullName>
    <label>Correlation Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>