force-app/main/default/objects/ChatMessageIn__e/fields/ExternalThreadId__c.field-meta.xml
<CustomField>
    <fullName>ExternalThreadId__c</fullName>
    <label>External Thread Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>