force-app/main/default/objects/ChatMessageIn__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Text</type>
    <length>16</length>
</CustomField>