force-app/main/default/objects/ChatMessageIn__e/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <label>Thread Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>